Fix newsletter signup on mobile

--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -18,6 +18,11 @@
   margin-top: 50px;
   margin-bottom: 30px;
   text-align: center;
+    iframe {
+      max-width: 100%;
+      width: 480px;
+      height: 320px;
+    }
 }
 
 .footer__text { 
